commit to Timeline Service
- debug : binding queue to other service instance's exchange
- test to load multiple instances

--- a/timelineService/src/main/resources/application.yml
+++ b/timelineService/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 server:
+  # change point to scalability
   port: 18771
   
 service:
+  # change point to scalability
   consumer: 'consumer_1'
   consumerGroup: 'consumer_group_1'
   
