--- a/timelineService/pom.xml
+++ b/timelineService/pom.xml
@@ -56,6 +56,13 @@
 			<artifactId>hazelcast-aws</artifactId>
 			<version>2.4</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
