--- a/timelineService/pom.xml
+++ b/timelineService/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		
 		<!-- swagger -->
 		<dependency>
 			<groupId>io.springfox</groupId>
