--- a/timelineService/pom.xml
+++ b/timelineService/pom.xml
@@ -69,6 +69,12 @@
 		    <artifactId>json-path</artifactId>
 		    <version>2.4.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
