Timeline Service Commit
 - 1. make batch function to check health statuses of service instances
in cluster.
 - 2. make interface of ServiceController for health check.

--- a/timelineService/src/main/resources/application.yml
+++ b/timelineService/src/main/resources/application.yml
@@ -6,6 +6,8 @@ service:
   # change point to scalability
   consumer: 'consumer_1'
   consumerGroup: 'consumer_group_1'
+  healthCheckBatch: '*/1 * * * * ?'
+  healthCheckMissTermByMs: 3000
   
 systemInterface:
   inMemoryInterface:
